# tinydns

./: .gitignore  Makefile.am  configure.ac
include/: tinydns_client.h  tinydns_common.h
test/: .gitignore  client_resource_records.c  testlib.h
